- Fixed a bug with words longer than 10 characters - Fixed TEXTPIC sequence tag to support alignment - Fixed TEXTPIC codadct to support alignment - Fixed SOFTBLOCK and BLOCK condacts, that had some problems when chained - Modified default css file to add some margin to TEXTPIC images

--- a/installation_aux_files/css.css
+++ b/installation_aux_files/css.css
@@ -160,3 +160,7 @@ a:hover {
 	width:100%;
 	overflow:scroll
 }
+
+.textpic {
+margin: 25px;
+}
